--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 
 theme: jekyll-theme-minimal
 show_downloads: false
-google_analytics: G-V9QR9PVP9R
+google_analytics: G-TS8QKBDJSD
 
 author:
   name: "Arsene K"
